# dj-translatemessages

./: README.md  pyproject.toml
dj_translatemessages/: apps.py  exceptions.py  llm.py  prompts.py  settings.py
dj_translatemessages/management/commands/: translatemessages.py
docs/: migration_guideline.md
tests/: settings.py  test_prompts.py  test_translatemessages.py
yesglot/management/commands/: translatemodels.py
